packages/typ/tests/fixtures/diagnostics/0229_adt_record_field_int_bool_10.ml
type rec_kappa = { key : int; ok : bool }
let _ : rec_kappa = { key = true; ok = false }
